# AtTenR

./: .gitignore  Cargo.toml  Dockerfile
.github/workflow/: deploy_dev.yml
.github/workflows/: deploy_dev.yml  deploy_dev_arm_64.yml  rust.yml
migrations/2024-06-08-133919_INITIAL/: down.sql  up.sql
migrations/2024-06-08-133926_user/: up.sql
migrations/2024-06-08-133926_users/: up.sql
migrations/2024-07-17-191223_todo/: up.sql
src/: config.rs  db.rs  main.rs  schemas.rs
src/catcher/: catcher.rs
src/data/database/: mod.rs  test.rs
src/data/database/todo/: database.rs  mod.rs  objects.rs  test.rs
src/data/database/user/: database.rs  mod.rs  objects.rs  test.rs
src/data/repository/auth/: mod.rs  objects.rs  repository.rs
src/data/repository/auth/jwt/: access_generator.rs  generator.rs  internal_objects.rs  mod.rs  objects.rs  refresh_generator.rs  token_generator.rs
src/data/repository/todo/: mod.rs  objects.rs  repository.rs
src/db/: mod.rs
src/handler/: mod.rs
src/handler/catcher/: catcher.rs
src/handler/routes/: mod.rs  response.rs
src/handler/routes/auth/: auth.rs  mod.rs  request.rs  response.rs
src/handler/routes/auth/validator/: login.rs  password.rs  tests.rs
src/handler/routes/user/: mod.rs
src/handler/routes/validators/: parcer.rs
src/handler/routes/validators/jwt/: access_token.rs  default_token.rs  mod.rs  tests.rs
src/routes/: mod.rs  response.rs  router.rs
src/routes/auth/: auth.rs  response.rs
src/routes/auth/validator/: mod.rs  tests.rs
src/routes/todo/: mod.rs  request.rs  response.rs  todo.rs
src/routes/user/: mod.rs
src/routes/validators/: access_token.rs  api_key.rs  mod.rs  refresh_token.rs
src/routes/validators/jwt/: refresh_token.rs  tests.rs
src/utils/: mod.rs  test.rs
