[package]
name = "atten_r"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"

rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = [
    "diesel_postgres_pool",
] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.3"

diesel = { version = "2.2.0", features = ["postgres", "uuid", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
